# optimization4DS_homework

./: pyproject.toml
homework/: homework.ipynb  my_functions.py
