[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Mattia Piazza <mattiapiazza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
